# py_apps

./: .gitignore  .gitignore.swp  Makefile  README.md  main.spec  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg
.github/workflows/: build-tar.yml  build.yml  main.yml
docs/: README.md  ci-pipeline.md  development.md  installation.md  usage.md
hooks/: pre-push
py3_tmoe/: main.py
py3_tmoe/apps/browser/: common.py  epiphany.py  falkon.py  firefox.py  midori.py  vivaldi.py
py3_tmoe/apps/devtools/: vscode.py
py3_tmoe/error/: errors.py
py3_tmoe/errors/: cmd_not_found.py  common.py  distro_x_only.py  unknown_pkg_manager.py
py3_tmoe/pages/: browser.py  devtools.py  main.py
py3_tmoe/pages/browser/: firefox.py  index.py  vivaldi.py
py3_tmoe/tools/utils/: app_manage.py  download.py  errors.py  utils.py
py3_tmoe/ui/: dialog.py  dialog.tcss  notice.py  notice.tcss  selection.py  selection.tcss
py3_tmoe/utils/: app_manage.py  common.py  download.py  network.py  sys.py  utils.py
py_apps/: main.py
py_apps/apps/browser/: epiphany.py  falkon.py  firefox.py  midori.py  vivaldi.py
py_apps/apps/devtools/: jetbrains.py  neovim.py  vscode.py
py_apps/errors/: unsupported_arch.py
py_apps/pages/: browser.py  common.py  devtools.py  main.py
py_apps/ui/: notice.py  notice.tcss
py_apps/utils/: app_manage.py  cmd.py  network.py  utils.py
src/: main.py
src/tools/utils/: app_manage.py  errors.py  utils.py
src/ui/: dialog.py
tests/unittests/: test_check_if_cmd_exists.py  test_checkarch.py  test_distro_name.py
(+4 files in other folders)
